--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <header>
     <div class="logo-container">
-        <img src="https://gemini.google.com/share/72e67eb92294"Logo Miftahul Ilmi Book & Design">
+        <img src="Logo Mi saja.jpg" alt="Logo Miftahul Ilmi Book & Design" style="max-height: 200px; width: auto;">
     </div>
 </header>
 
