--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
 <header>
     <div class="logo-container">
-        <img src="Logo Mi saja.png" alt="Logo Miftahul Ilmi Book & Design" style="max-height: 180px; width: auto;">
+        <img src="Logo Mi saja.png" alt="Logo Miftahul Ilmi Book & Design" style="max-height: 300px; width: auto; display: block; margin: 0 auto;">
 </header>
 
 <nav>
@@ -77,3 +77,4 @@
 </body>
 
 </html>
+
