--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <p><strong>Alamat:</strong> C-08-17, Menara C, Youth City, Persiaran Bandar Baru Nilai, 71800 Nilai, Negeri Sembilan</p>
         <p><strong>Waktu Operasi:</strong> Isnin - Jumaat (9:30 AM - 5:00 PM)</p>
         <p><strong>Telefon:</strong> <a href="tel:01112350367">011-12350367</a></p>
-        <p><strong>Emel:</strong> <a href="mailto:funscreening@gmail.com">funscreening@gmail.com</a></p>
+        <p><strong>Emel:</strong> <a href="mailto:miftahulilmi.vk@gmail.com">miftahulilmi.vk@gmail.com</a></p>
     </div>
     <hr>
     <p>&copy; 2026 Miftahul Ilmi Book & Design. Hak Cipta Terpelihara.</p>
@@ -77,5 +77,6 @@
 </body>
 
 </html>
+
 
 
